--- a/src/app/features/home/pages/home/home.html
+++ b/src/app/features/home/pages/home/home.html
@@ -3,9 +3,13 @@
   <!-- Hero Section -->
   <hero-component></hero-component>
 
-
-
   <!-- About Section -->
+  <about-component></about-component>
+
+
+
+
+
   <!-- <section id="about" class="about-section section">
     <div class="container">
       <div class="about-grid">
