--- a/src/app/features/home/components/services-component/services-component.html
+++ b/src/app/features/home/components/services-component/services-component.html
@@ -74,5 +74,37 @@
             <div class="grid-item bottom-right">
             </div>
         </div>
+
+
+        <!-- Testimonials -->
+        <div class="testimonials">
+            <div class="testimonial-card">
+                <h1 class="section-title">*Testim<div class="char-image"></div>nials</h1>
+                <div class="video-player-container">
+                    <div class="card-icon">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <p class="watch-video">Watch what our clients are saying</p>
+                </div>
+
+                <div class="card-content">
+                    <p class="description">"Wrbanite Developers exceeded my expectations with their innovative design and impeccable execution. From start to finish, their team demonstrated professionalism and integrity. delivering my dream urban apartment on time and within budget. Highly recommended!"</p>
+                    <div class="author">David T. Jhonson</div>
+                    <div class="role">Entrepreneur</div>
+                </div>
+            </div>
+
+            <div class="hero-bubbles" role="img" aria-label="Decorative brand elements">
+                <div class="hero-bubble hero-bubble-top" 
+                    role="button" 
+                    tabindex="0"
+                    aria-label="Interactive brand bubble - top"></div>
+                <div class="hero-bubble hero-bubble-bottom" 
+                    role="button" 
+                    tabindex="0"
+                    aria-label="Interactive brand bubble - bottom"></div>
+            </div>
+        </div>
     </div>
-  </section>
+
+  </section>    <div class="line-separator2"></div>
