--- a/src/app/features/home/components/services-component/services-component.scss
+++ b/src/app/features/home/components/services-component/services-component.scss
@@ -454,6 +454,7 @@
             .title {
                 font-size: clamp(1.8rem, 6vw, 2.5rem);
                 margin-bottom: var(--spacing-sm);
+                text-align: center;
             }
 
             p {
@@ -534,15 +535,13 @@
             margin-bottom: var(--spacing-md);
 
             .section-title {
-                font-size: clamp(1.5rem, 8vw, 3rem);
+                font-size: 1.5rem;
                 margin-bottom: var(--spacing-md);
-                flex-direction: column;
-                gap: var(--spacing-xs);
                 text-align: center;
 
                 .char-image {
-                    width: 2.5rem;
-                    height: 2.5rem;
+                    width: 1.5rem;
+                    height: 1.5rem;
                     margin: 0.3rem 0;
                     top: 0;
                 }
