refactor(contact): update FAQ toggle icon and adjust styles for better visibility

--- a/src/app/features/home/components/contact-component/contact-component.html
+++ b/src/app/features/home/components/contact-component/contact-component.html
@@ -55,7 +55,7 @@
                     <div class="faq-question" (click)="toggleFaq(i)">
                         <span class="question-text">{{ faq.question }}</span>
                         <span class="toggle-icon" [class.open]="faq.isOpen">
-                            <i class="icon">+</i>
+                            <i class="icon"></i>
                         </span>
                     </div>
                     <div class="faq-answer" [class.open]="faq.isOpen">
