refactor(contact): add id and aria-label to contact section for improved accessibility

--- a/src/app/features/home/components/contact-component/contact-component.html
+++ b/src/app/features/home/components/contact-component/contact-component.html
@@ -1,4 +1,4 @@
-<section class="contact-section">   
+<section id="contact" aria-label="contact-section" class="contact-section">   
     <div class="container">
         <div class="header">
             <div class="col-1">
