--- a/src/app/features/home/components/contact-component/contact-component.scss
+++ b/src/app/features/home/components/contact-component/contact-component.scss
@@ -70,6 +70,7 @@
         display: flex;
         flex-direction: row;
         gap: var(--spacing-xxl);
+        position: relative;
 
         .card{
             flex: 1;
@@ -134,8 +135,24 @@
                     letter-spacing: 1px;
                 }
 
+            }        
+            &::after {
+                content: "";
+                position: absolute;
+                top: -60px;
+                right: -60px;
+                width: 10px;
+                height: 10px;
+                background: rgb(116, 19, 19);
+                box-shadow: 
+                    60px 0 0 0 white,
+                    0 -60px 0 0 white,
+                    60px -60px 0 0 white;
+                z-index: -1;
             }
         }
+
+
     }
 
     .help-corner{
